k8s/api-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${NAME}-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: ${NAME}-api
        app: ${NAME}
    spec:
      containers:
        - name: ${NAME}
          image: ${IMAGEWTAG}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - name: api
              containerPort: 5000
---
