k8s/crossbar-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ewetasker-crossbar
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: ${NAME}-crossbar
        app: ${NAME}-crossbar
    spec:
      imagePullSecrets:
        - name: registry.cluster.gsi.dit.upm.es
      containers:
        - name : ${NAME}-crossbar
          image: ${IMAGEWTAGCROSSBAR}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 8081
          - containerPort: 8082
          - containerPort: 1883
---
