k8s/mongo-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${NAME}-mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: ${NAME}-mongo
        app: ${NAME}-mongo
    spec:
      containers:
        - name: ${NAME}-mongo
          image: mongo:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /data/db
              name: ewe-data
              subPath: ewetasker-mongo
          ports:
            - containerPort: 27017
      volumes:
        - name: ewe-data
          persistentVolumeClaim:
            claimName: ewetasker-pvc
---
