k8s/api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
spec:
  type: ClusterIP
  ports:
    - port: 5050
      protocol: TCP
      targetPort: 5000
  selector:
    role: ${NAME}-api
---
