k8s/crossbar-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-crossbar
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
  - port: 8082
    targetPort: 8082
  - port: 1883
    targetPort: 1883
  selector:
    role: ${NAME}-crossbar
---
