k8s/eye-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-eye
spec:
  type: ClusterIP
  ports:
    - port: 4040
      protocol: TCP
      targetPort: 8000
  selector:
    role: ${NAME}-eye
---
