k8s/mongo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    role: ${NAME}-mongo
---
